fix(dialog): fix spacing of following dialog

--- a/src/components/UserProfile/FollowingDialog/FeedType/styles.module.css
+++ b/src/components/UserProfile/FollowingDialog/FeedType/styles.module.css
@@ -2,12 +2,11 @@
   position: sticky;
   top: 0;
   z-index: var(--z-index-sticky-tabs);
-  padding: 0 var(--spacing-base);
-  margin: 0 calc(var(--spacing-base) * -1) 0;
+  margin: 0;
   background: var(--color-white);
 
   @media (--sm-up) {
     top: calc(var(--spacing-base) * -1);
-    margin: calc(var(--spacing-base) * -1) 0 0;
+    margin: calc(var(--spacing-base) * -1) var(--spacing-base) 0;
   }
 }
